[tool.poetry]
name = "django-nw"
version = "0.1.0"
description = ""
authors = ["knw <kimnamwook08@gmail.com>"]
readme = "README.md"
packages = [{include = "django_nw"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
selenium = "^4.8.2"
djangorestframework = "^3.14.0"
ndg-httpsclient = "^0.5.1"
pyasn1 = "^0.4.8"
django-allauth = "^0.52.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
